--- a/src/TankerkoenigToInfluxDb/Dockerfile
+++ b/src/TankerkoenigToInfluxDb/Dockerfile
@@ -1,7 +1,10 @@
-FROM mcr.microsoft.com/dotnet/core/runtime:3.0-buster-slim AS base
+#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
+#For more information, please see https://aka.ms/containercompat
+
+FROM mcr.microsoft.com/dotnet/core/runtime:3.0-nanoserver-1903 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0-nanoserver-1903 AS build
 WORKDIR /src
 COPY ["TankerkoenigToInfluxDb/TankerkoenigToInfluxDb.csproj", "TankerkoenigToInfluxDb/"]
 RUN dotnet restore "TankerkoenigToInfluxDb/TankerkoenigToInfluxDb.csproj"
@@ -15,4 +18,4 @@ RUN dotnet publish "TankerkoenigToInfluxDb.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "TankerkoenigToInfluxDb.dll"]
+ENTRYPOINT ["dotnet", "TankerkoenigToInfluxDb.dll", "Tankpreise"]
