--- a/src/TankerkoenigToInfluxDb/TankerkoenigToInfluxDb.csproj
+++ b/src/TankerkoenigToInfluxDb/TankerkoenigToInfluxDb.csproj
@@ -3,15 +3,28 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Plugin.Configuration" Version="1.0.17" />
-    <PackageReference Include="Plugin.Scheduling" Version="1.0.17" />
-    <PackageReference Include="ServiceHost.Docker" Version="1.0.17" />
+    <PackageReference Include="Plugin.Configuration" Version="1.0.25" />
+    <PackageReference Include="Plugin.DataAccess.InfluxDb" Version="1.0.25" />
+    <PackageReference Include="Plugin.Scheduling" Version="1.0.25" />
+    <PackageReference Include="Plugin.ThreadManager" Version="1.0.25" />
+    <PackageReference Include="Plugin.XmlToObjectPlugin" Version="1.0.25" />
+    <PackageReference Include="ServiceHost.Docker" Version="1.0.25" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Nlog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
