--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,7 @@ stages:
       displayName: 'Get Version Number'
       inputs:
         runtime: 'core'
+        configFilePath: 'gitversion.yml'
 
     - task: Docker@2
       displayName: Build the image
