--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,9 @@ stages:
       inputs:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/src/TankerkoenigToInfluxDb/Dockerfile'
+        buildContext: '$(Build.SourcesDirectory)/src'
         tags: |
-          $(tag)
+          $(GitVersion.ASSEMBLYSEMFILEVER)
           
     - task: Docker@2
       displayName: Push the image
@@ -41,4 +42,5 @@ stages:
         containerRegistry: 'GitHub Docker'
         repository: 'jasase/tankerkoenigtoinfluxdb'
         command: 'push'
-        tags: '$(tag)'
+        tags: |
+          $(GitVersion.ASSEMBLYSEMFILEVER)
