--- a/src/nuget.config
+++ b/src/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
     <packageSources>
         <add key="Github-Jasase" value="https://nuget.pkg.github.com/jasase/index.json" />
-		<add key="local" value="NugetPackage" />
+		<!--<add key="local" value="NugetPackage" />-->
     </packageSources>
 </configuration>
