--- a/src/nuget.config
+++ b/src/nuget.config
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
-        <add key="Github-Jasase" value="https://nuget.pkg.github.com/jasase/index.json" />
-		<!--<add key="local" value="NugetPackage" />-->
+	<add key="local" value="NugetPackage" />
     </packageSources>
 </configuration>
