--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,7 @@ stages:
         command: 'restore'
         restoreSolution: '**/*.sln'
         feedsToUse: 'select'
+        vstsFeed: 'e745086d-201a-4e45-8d8f-ed7088052af8'
         restoreDirectory: 'src/NugetPackage'
 
     - task: Docker@2
