--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,11 +42,12 @@ stages:
     - task: Docker@2
       displayName: Build the image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/src/TankerkoenigToInfluxDb/Dockerfile'
+        containerRegistry: 'GitHub Docker'
+        repository: 'jasase/tankerkoenigtoinfluxdb'
+        command: 'build'
+        Dockerfile: '**/Dockerfile'
         buildContext: '$(Build.SourcesDirectory)/src'
-        tags: |
-          $(GitVersion.ASSEMBLYSEMFILEVER)
+        tags: '$(GitVersion.ASSEMBLYSEMFILEVER)'
           
     - task: Docker@2
       displayName: Push the image
