--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
       displayName: Build the image
       inputs:
         containerRegistry: 'GitHub Docker'
-        repository: 'jasase/tankerkoenigtoinfluxdb/tankerkoenigtoinfluxdb'
+        repository: 'jasase/tankerkoenigtoinfluxdb/runner'
         command: 'build'
         Dockerfile: '**/Dockerfile'
         buildContext: '$(Build.SourcesDirectory)/src'
@@ -53,7 +53,6 @@ stages:
       displayName: Push the image
       inputs:
         containerRegistry: 'GitHub Docker'
-        repository: 'jasase/tankerkoenigtoinfluxdb/tankerkoenigtoinfluxdb'
+        repository: 'jasase/tankerkoenigtoinfluxdb/runner'
         command: 'push'
-        tags: |
-          $(GitVersion.ASSEMBLYSEMFILEVER)
+        tags: $(GitVersion.ASSEMBLYSEMFILEVER)
