--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ stages:
         command: 'build'
         Dockerfile: '**/Dockerfile'
         buildContext: '$(Build.SourcesDirectory)/src'
-        tags: '$(GitVersion.ASSEMBLYSEMFILEVER)'
+        tags: '$(GitVersion.NuGetVersionV2)'
           
     - task: Docker@2
       displayName: Push the image
@@ -55,4 +55,4 @@ stages:
         containerRegistry: 'GitHub Docker'
         repository: 'jasase/tankerkoenigtoinfluxdb/runner'
         command: 'push'
-        tags: $(GitVersion.ASSEMBLYSEMFILEVER)
+        tags: $(GitVersion.NuGetVersionV2)
