--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,44 +15,13 @@ stages:
 - stage: Build
   displayName: Build image
   jobs:  
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: 'windows-latest'
-    steps:
-
-    - task: GitVersion@5
-      displayName: 'Get Version Number'
-      inputs:
-        runtime: 'core'
-        configFilePath: 'gitversion.yml'
-
-    - task: NuGetToolInstaller@1
-      inputs:
-        versionSpec: 
-
-    - task: NuGetCommand@2
-      inputs:
-        command: 'restore'
-        restoreSolution: '**/*.sln'
-        feedsToUse: 'select'
-        vstsFeed: 'e745086d-201a-4e45-8d8f-ed7088052af8'
-        restoreDirectory: 'NugetPackage'
-
-    - task: Docker@2
-      displayName: Build the image
-      inputs:
-        containerRegistry: 'Docker Hub'
-        repository: 'jasase/tankerkoenigtoinfluxdb'
-        command: 'build'
-        Dockerfile: '**/Dockerfile'
-        buildContext: '$(Build.SourcesDirectory)/src'
-        tags: '$(GitVersion.NuGetVersionV2)'
-          
-    - task: Docker@2
-      displayName: Push the image
-      inputs:
-        containerRegistry: 'Docker Hub'
-        repository: 'jasase/tankerkoenigtoinfluxdb'
-        command: 'push'
-        tags: '$(GitVersion.NuGetVersionV2)'
+  - template: jobs/build.yml  # Template reference
+    parameters:
+      name: windows
+      pool:
+        vmImage: 'windows-latest'
+  - template: jobs/build.yml  # Template reference
+    parameters:
+      name: linux
+      pool:
+        vmImage: 'ubuntu-latest'
