Rename file for case sensiteve problem with linux

--- a/src/TankerkoenigToInfluxDb/TankerkoenigToInfluxDb.csproj
+++ b/src/TankerkoenigToInfluxDb/TankerkoenigToInfluxDb.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="NLog2.config">
+    <None Update="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
