--- a/src/TankerkoenigToInfluxDb/Nlog.config
+++ b/src/TankerkoenigToInfluxDb/Nlog.config
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="c:\Logs\nlog-internal.log">
+      internalLogLevel="Off" internalLogFile="nlog-internal.log">
 
   <variable name="layout" value="${longdate} | ${level:padding=5:uppercase=true} | [${threadid:padding=4:padCharacter=0}] ${threadname} | ${logger} | ${message} ${onexception:EXCEPTION OCCURRED\:${exception:format=type,message,StackTrace:maxInnerExceptionLevel=5:innerFormat=shortType,message,StackTrace}}"/>
 
@@ -16,7 +15,7 @@
             maxArchiveFiles="60"
             archiveOldFileOnStartup="true"
             archiveNumbering="DateAndSequence"
-            fileName="C:\Logs\${processname}.log"/>
+            fileName="/logs/${processname}.log"/>
 
     <target xsi:type="Console" name="console" layout="${layout}" />
   </targets>
