--- a/src/TankerkoenigToInfluxDb/TankerkoenigToInfluxDb.csproj
+++ b/src/TankerkoenigToInfluxDb/TankerkoenigToInfluxDb.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,16 +13,16 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.5" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="Plugin.Configuration" Version="1.0.25" />
-    <PackageReference Include="Plugin.DataAccess.InfluxDb" Version="1.0.25" />
-    <PackageReference Include="Plugin.Scheduling" Version="1.0.25" />
-    <PackageReference Include="Plugin.ThreadManager" Version="1.0.25" />
-    <PackageReference Include="Plugin.XmlToObjectPlugin" Version="1.0.25" />
-    <PackageReference Include="ServiceHost.Docker" Version="1.0.25" />
+    <PackageReference Include="Plugin.Configuration" Version="1.0.28" />
+    <PackageReference Include="Plugin.DataAccess.InfluxDb" Version="1.0.28" />
+    <PackageReference Include="Plugin.Scheduling" Version="1.0.28" />
+    <PackageReference Include="Plugin.ThreadManager" Version="1.0.28" />
+    <PackageReference Include="Plugin.XmlToObjectPlugin" Version="1.0.28" />
+    <PackageReference Include="ServiceHost.Docker" Version="1.0.28" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Nlog.config">
+    <None Update="NLog.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
