Changed logging to avoid full disk

--- a/src/TankerkoenigToInfluxDb/NLog.config
+++ b/src/TankerkoenigToInfluxDb/NLog.config
@@ -12,7 +12,7 @@
             name="file"
             layout="${layout}"
             archiveEvery="Day"
-            maxArchiveFiles="60"
+            maxArchiveFiles="4"
             archiveOldFileOnStartup="true"
             archiveNumbering="DateAndSequence"
             fileName="/logs/${processname}.log"/>
@@ -22,6 +22,6 @@
 
   <rules>
     <logger name="*" minlevel="Trace" writeTo="console" />
-    <logger name="*" minlevel="Trace" writeTo="file" />
+    <!--<logger name="*" minlevel="Trace" writeTo="file" />-->
   </rules>
 </nlog>
